# movie_desktop

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
designer/: auth.ui  form.ui
docs/: TechnicalTask.md
icon/: res.qrc
src/: settings.py
src/config/: settings.py
src/services/: security.py
src/services/api/: themoviedb.py
src/services/auth/: security.py
src/services/db/: database.py  user.py
src/ui/: auth.py  form.py  ui_auth.py  ui_form.py
src/utils/: massage.py  schemas.py  ui.py  validation.py
tests/test_auth/: test_security.py
tests/test_utils/: test_validation.py
