[tool.poetry]
name = "movie-desktop"
version = "0.1.0"
description = ""
authors = ["Oleksii Martseniuk <martsenyk.l@gmail.com>"]
readme = "README.md"
packages = [{include = "movie_desktop"}]

[tool.poetry.dependencies]
python = "3.9.15"
pyside6 = "^6.4.0.1"
pymongo = "^4.3.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pyqt6-tools = "^6.1.0.3.2"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
